--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,6 @@
 .input:checked + .slider:before {
 	transform: translateX(30px);
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
